[package]
name = "lines-are-rusty"
version = "0.2.0"
authors = ["Axel Huebl <axel.huebl@plasma.ninja>", "David Rusu <davidrusu.me@gmail.com", "Thomas Weber <thomas.weber@notengrafik.com>"]
description = "Rust File API for the reMarkable tablet"
repository = "https://github.com/ax3l/lines-are-rusty"
homepage = "https://plasma.ninja/blog/devices/remarkable/binary/format/2017/12/26/reMarkable-lines-file-format.html"
edition = "2021"

[dependencies]
anyhow = "1.0.37"
byteorder = "1.3.4"
clap = "2"
pdf-canvas = "0.6"
svg = "0.10.0"
thiserror = "1.0.30"
phf = { version = "0.10.0", features = ["macros"] }
